# sprout

./: .clang-format  .clang-tidy  .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  SENSOR_QA.md  cspell.json  justfile  lychee.toml  pyproject.toml  ruff.toml  sLive.csv  sSpare.csv
.devcontainer/: devcontainer.json  setup.sh
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  labels.yml  release.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  task.yml
.github/workflows/: ci.yml  credit-nudge.yml  epic-hygiene.yml  pages.yml  release-draft.yml  sign-release.yml  weekly-battery.yml
arduino-starter/: arduino-starter.ino
config/: devices.example.json  identifiers.denylist.sha256  location.example.json  plant_profiles.example.json
config/photos/: .gitkeep
docs/: ADR.md  BRINGUP.md  CONTRIBUTORS_WELCOME.md  FLASHING.md  GLOSSARY.md  HANDOFF_2026-06-23.md  HANDOFF_2026-06-23_analytics.md  INSTRUMENT_EXCEPTIONS.md  OTA_FLASH.md  PLATFORMIO_TROUBLESHOOTING.md  README.md  RESEARCH_capacitive_soil_moisture_sensors.md  SEGMENT_TAXONOMY_CONTRACT.md  SENSOR_CALIBRATION.md  SENSOR_QA.md  STATUS.md  TELEMETRY_SCHEMA.md  TIER_STORE_CONTRACT.md  WIRING.md  flaura-video-transcript.txt  front-door.html  index.html  llms.txt  operating-collection.md  robots.txt  sample_env_log.csv  sample_log.csv  site.webmanifest  sitemap.xml  time-display-convention.md  trust-your-sensor.html
docs/adr/: 0000-record-architecture-decisions.md  0001-architecture-and-control-loop.md  0002-process-tiers.md  0003-work-pipeline.md  0004-design-system.md  0005-application-surface-and-frontend.md  0006-data-architecture.md  0007-brand-guidelines.md  0008-design-system-v3-personality-layer.md  0009-versioning-and-release-policy.md  0010-design-library-front-door.md  0011-experiment-capture-control-plane.md  0012-experiment-data-architecture.md  0013-environmental-data-architecture.md  0014-operator-control-plane.md  0015-no-personal-information-policy.md  0016-actuation-wiring-seam.md  0016-experiment-notebook-and-notes-durability.md  0017-experiment-notebook-and-notes-durability.md  0018-dual-mode-transport-and-durability.md  0019-capability-and-sensor-matrix.md  0020-network-identity-and-credentials.md  0021-parse-v1-telemetry-contract-boundary.md  0022-calibration-confidence-layer.md  0023-config-provenance.md  0023-contextual-env-columns.md  0024-multiplatform-pinning.md  0025-config-provenance.md  0026-firmware-delivery-and-update-security.md  0027-identity-model.md  0028-optional-peripherals-doctrine.md  0029-plant-pot-site-profile-registry.md  0030-version-identity-and-display-contract.md  0031-read-path-rollup-tiers.md  0032-github-pages-design-library-serving.md  0033-two-surface-architecture-home-and-workbench.md  0034-pages-root-is-the-public-front-door.md  0035-band-model-and-instrument-exceptions.md  0036-sensor-identity-layers.md  0037-production-epoch-and-data-admissibility.md  (+1 more)
docs/analysis/: env-value-verdict.md
docs/audits/: 2026-07-10-adr-0030-display-contract-conformance.md  2026-07-10-never-stitch-consumer-audit.md
docs/bench-procedures/: arduino-starter-verify-run-sheet.md  bench-preflight-checklist.md  c5-s3-flash-recovery.md  environment-evidence-procedure.md  front-door-launch-runbook.md  multi-plant-dry-wet-run-sheet.md  pumps-relays-bringup-run-sheet.md  s3-c5-bringup-run-sheet.md  safety-gate-run-sheet.md  search-deployment-run-sheet.md  signed-pull-ota-run-sheet.md  untethered-wifi-evidence-run-sheet.md  yellow-c5-yyvvpd-recovery-run-sheet.md
docs/community/: crosslink-checklist.md  discussions.md  platform-metadata.md  release-notes-voice.md
firmware/: .gitignore  platformio.ini  platformio_local.example.ini
tools/: clang_format_changed_lines.py  preview.py
(+707 files in other folders)
