# Sprout — host Python tooling environment (ADR-0002 #3).
# `uv sync` reproduces this exact, locked dev env in one command. This repo is a
# collection of host tools + firmware, not a distributable package, so package = false:
# uv manages the environment; it does not build or install a wheel.

[project]
name = "sprout"
version = "0.7.3"  # single product version line (ADR-0009 §1); synced repo-wide each release (§3)
description = "Sprout — an honest capacitive soil-moisture + small-pump auto-waterer (host tooling)."
requires-python = ">=3.11"
license = "MIT"  # SPDX; the authoritative text is the LICENSE file at the repo root
dependencies = [
  "pyserial>=3.5",  # the host serial logger / experiment-capture runtime
  "duckdb>=1.0",    # analysis stores: Lab Notebook (#155) + the #828 DuckDB/Parquet tier (#1239).
                    # Parquet I/O is DuckDB-native (COPY/read_parquet) — no pyarrow needed (#1249).
  "pandas>=2.0",    # ingestion into the store + query results
  "pillow>=11",     # card photo intake (#875 Q4): downsample + EXIF strip, local-only
]

[dependency-groups]
dev = [
  "ruff>=0.15.22",            # lint + format (policy lives in ruff.toml)
  "pytest>=8",            # host test harness (ADR-0002 #11)
  "pre-commit>=3.7",      # the local enforcement layer (ADR-0002 #10)
  "clang-format==22.1.8", # C/C++ changed-LINES format gate (#352); the wheel ships
                          # both the binary AND git-clang-format, hash-pinned in
                          # uv.lock — one source, no ambient toolchain (ADR-0002 #10)
]

[tool.uv]
package = false
